<resources>
    <string name="app_name">餌やった？</string>
    <string name="text1">ペット一覧</string>
    <string name="text2">ペットを追加</string>
    <string name="text3">ペット！！</string>

    <string name="amount">量</string>
    <string name="hint_key">普通</string>
    <string name="hint_hour">13</string>
    <string name="hour">時</string>
    <string name="hint_minute">30</string>
    <string name="minute">分</string>
    <string name="subject">やった人</string>
    <string name="hint_person">飼い主A</string>
    <string name="person1">飼い主A</string>
    <string name="person2">飼い主B</string>
    <string name="person3">飼い主C</string>
    <string name="insert">記録</string>
    <string name="read">read</string>
</resources>
